--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,1 +1,11 @@
-@import './variables.json';
+$aqua: #009688;
+$greyBlue: #607D8B;
+$darkGreyBlue: #455A64;
+$grey: #CFD8DC;
+$white: #F7F6F6;
+$black: #232323;
+
+$sectionPadding: 8rem;
+
+$navbarLogoHeight: 50px;
+$navbarBreakpoint: 992px;
